fix ui shifting

--- a/src/app/spin/spin.module.css
+++ b/src/app/spin/spin.module.css
@@ -991,7 +991,7 @@
   aspect-ratio: 2 / 3;
   position: absolute;
   left: 50%;
-  top: calc(50% + 18px);
+  top: 50%;
   transform: translate(-50%, -50%);
   filter: drop-shadow(0 0 18px rgb(126 75 255 / 0.92));
 }
@@ -1005,12 +1005,12 @@
 .revealAllButton {
   position: absolute;
   left: 50%;
-  bottom: 116px;
+  bottom: 96px;
   transform: translateX(-50%);
   border: 0;
   background: transparent;
   color: rgb(255 255 255 / 0.72);
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   white-space: nowrap;
   display: inline-flex;
